improve msg processing logic